chore(core): some work on the announcer module.